# whspr

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  models.rs
