[package]
name = "whspr"
description = "A CLI tool for Whisper."
repository = "https://github.com/junapur/whspr"
authors = ["June <junapur@proton.me>"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.20"
